    Bugfixes:
	- Fixed compilation failure when docutils is not installed
	- Removed all compiler warnings on Windows
		When compiling a debug version, some warnings remain
		(intentionally).
	- Fixed a compilation failure on Fedora when using postgresql
	- Fixed failure to compile with gcc 6
	- Fixed failure to compile when rpm is not installed
		(e.g. on non-rpm systems...)
[31 May 2016]
    Features:
	- Support for postgresql backend added
		Compatible with two previous unofficial implementations, by
		ShadowNinja and johnnyjoy. Support for these will be removed
		in a future version of Minetestmapper.
	- Support for MSVC/Windows compilation (Thanks to adrido!)
    Enhancements:
        - Updated the included colors file with colors for the new tiles that
	 	were recently added to the default minetest game.
	- Improved the scripts and documentation for generating a colors.txt
		file.
	- HTML versions of documentation in doc/ is now generated, and included
		in the different packages.
	- Documented concurrent minetest & minetestmapper use.
	- Documented the different geometries reported with --verbose
	- Mentioned adrido's MinetestmapperGUI in the manual
	- The option --prescan-world was added to force or disable scanning the
		entire world (i.e. reading a full blocklist)
		(useful for postgresql, which doesn't do this by default).
	- Command-line options are now all case-agnostic wrt their parameters.
	- Allow nodes to be defined as air-type or ignore-type in colors.txt
	- Added an option to draw 'ignore'-nodes.
	- Text drawn on the map is now converted to the ISO8859-2 encoding. Due
		to limited font support in the drawing library, characters not
		in the ISO8859-2 set are not supported.
		Minetestmapper will attempt to render unsupported characters
		sensibly if it can.
    Bugfixes:
        - Fixed possible compilation failure caused by stdint.h
	- Fixed compilation failure when some database libraries are not installed.