@@ -285,6 +285,7 @@ EXIT /B %$EXITVAL%
 	SET $LINE=!$LINE:@VERSION_MINOR@=%$VERSION_MINOR%!
 	SET $LINE=!$LINE:@PACKAGING_FLAT@=%$PACKAGING_FLAT%!
 	SET $LINE=!$LINE:@INSTALL_PREFIX@=%$INSTALL_PREFIX%!
+	SET $LINE=!$LINE:@CPP_ABI_STDSTRING_OK@=1!
 	
 	ECHO %$INDENT%%$LINE% >> %$OUTPUT%
 	ENDLOCAL
