@@ -21,5 +21,7 @@
 #define PACKAGING_FLAT @PACKAGING_FLAT@
 #define INSTALL_PREFIX "@INSTALL_PREFIX@"
 
+#define CPP_ABI_STDSTRING_OK @CPP_ABI_STDSTRING_OK@
+
 #endif
 
